[package]
name = "final_report"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
obj-rs = "0.7.0"
glium = "0.30.2"
rand = "0.8.4"
rand_chacha = "0.3.1"
colorgrad = "0.5.0"
octree = "0.1.0"
sphrs = "0.1.3"
rayon = "1.5.1"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "bench"
harness = false
